--- a/report/report/related.tex
+++ b/report/report/related.tex
@@ -272,3 +272,9 @@ For example, in many analyses of large data sets (say for example consumer ranki
 
 
 
+
+%-----------------------------------------------------------------------------------------------------------------------------------------------------------------
+\subsubsection{Application to image processing}
+
+
+
